--- a/style.css
+++ b/style.css
@@ -71,15 +71,14 @@ h1 {
 
 .between {
   font-size: 1.4rem;
-  position: absolute;
-  top: 2rem;
-  right: 2rem;
+  width: 25rem;
+  margin-bottom: 2rem;
+  line-height: 3rem;
+  text-align: left;
 }
 
 .again {
-  position: absolute;
-  top: 2rem;
-  left: 2rem;
+  margin-top: 3rem;
 }
 
 .guess {
